# flixelplusplus

./: .gitattributes  .gitignore  .gitmodules  3ds_8h.html  3ds_8h.js  3ds_8h_source.html  BUILDING.md  CMakeLists.txt  COMPARISONS.md  Common_8hpp.html  Common_8hpp.js  Common_8hpp_source.html  Doxyfile  FlxAnimation_8hpp.html  FlxAnimation_8hpp_source.html  FlxAssets_8hpp.html  FlxAssets_8hpp.js  FlxAssets_8hpp_source.html  FlxBasic_8hpp.html  FlxBasic_8hpp_source.html  FlxColor_8hpp.html  FlxColor_8hpp_source.html  FlxG_8hpp.html  FlxG_8hpp.js  FlxG_8hpp_source.html  FlxGame_8hpp.html  FlxGame_8hpp_source.html  FlxGraphic_8hpp.html  FlxGraphic_8hpp_source.html  FlxGroup_8hpp.html  FlxGroup_8hpp_source.html  FlxHttp_8hpp.html  FlxHttp_8hpp_source.html  FlxKeyboard_8hpp.html  FlxKeyboard_8hpp_source.html  FlxLog_8hpp.html  FlxLog_8hpp_source.html  FlxMacros_8hpp.html  FlxMacros_8hpp.js  FlxMacros_8hpp_source.html  (+136 more)
.github/workflows/: doxygen.yml
WindowsSupport/Flixel++/: Flixel++.sln
WindowsSupport/Flixel++/Flixel++/: Flixel++.vcxproj  Flixel++.vcxproj.filters  Main.cpp
WindowsSupport/Flixel++/Flixel++/include/flixel++/: Common.hpp  FlxSound.hpp
WindowsSupport/Flixel++/Flixel++/includes/AL/lib/: OpenAL32.lib
WindowsSupport/Flixel++/Flixel++/includes/AL/lib/pkgconfig/: openal.pc
WindowsSupport/Flixel++/Flixel++/includes/vorbis/lib/: vorbisfile.lib
WindowsSupport/Flixel++/Flixel++/includes/vorbis/lib/pkgconfig/: vorbis.pc  vorbisenc.pc  vorbisfile.pc
WindowsSupport/Flixel++/Flixel++/lib/x64/: OpenAL32.lib  ogg.lib  vorbis.lib  vorbisenc.lib
WindowsSupport/Flixel++/Flixel++/source/: FlxManagers.cpp  FlxSound.cpp
WindowsSupport/Flixel++/Flixel++/x64/Debug/: Flixel++.exe.recipe  Flixel++.ilk  Flixel++.vcxproj.FileListAbsolute.txt  vc143.idb
WindowsSupport/Flixel++/Flixel++/x64/Debug/Flixel++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Flixel++.lastbuildstate  Flixel++.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
examples/: Makefile  State.hpp  common.mk  example  example1  logoC.h  main.cpp
examples/logo/: PlayState.hpp  example  main.cpp
examples/saul-goodman/: State.hpp  build.sh  main.cpp
include/flixel++/: Common.hpp  FlxAnimation.hpp  FlxAssets.hpp  FlxAudioBackends.hpp  FlxBackends.hpp  FlxBasic.hpp  FlxCamera.hpp  FlxColor.hpp  FlxError.hpp  FlxG.hpp  FlxGame.hpp  FlxGraphic.hpp  FlxGroup.hpp  FlxHttp.hpp  FlxKeyboard.hpp  FlxLog.hpp  FlxMacros.hpp  FlxManagers.hpp  FlxMouse.hpp  FlxNet.hpp  FlxObject.hpp  FlxPoint.hpp  FlxRect.hpp  FlxScript.hpp  FlxShader.hpp  FlxSound.hpp  FlxSplash.hpp  FlxSprite.hpp  FlxState.hpp  FlxText.hpp  FlxUtils.hpp  SDL_Backports.hpp  State.hpp
include/flixel++/platform/: 3ds.h  pc.h  platform.h  wii.h
mk/: 3ds.mk  CMakeLists.txt  FindGLEW.cmake  FindLibVorbis.cmake  FindLibVorbisfile.cmake  FindSDL2_image.cmake  FindSDL_image.cmake  FindSDL_ttf.cmake  pc.mk  switch.mk  wii.mk
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+59 more)
source/: FlxALBackend.cpp  FlxAnimation.cpp  FlxAssets.cpp  FlxBackends.cpp  FlxBasic.cpp  FlxCamera.cpp  FlxColor.cpp  FlxGLBackend.cpp  FlxGame.cpp  FlxGraphic.cpp  FlxGroup.cpp  FlxHttp.cpp  FlxKeyboard.cpp  FlxLog.cpp  FlxManagers.cpp  FlxMouse.cpp  FlxNet.cpp  FlxObject.cpp  FlxPoint.cpp  FlxRect.cpp  FlxSDLBackend.cpp  FlxScript.cpp  FlxShader.cpp  FlxSound.cpp  FlxSplash.cpp  FlxSprite.cpp  FlxState.cpp  FlxText.cpp  FlxUtils.cpp  FlxX11Backend.cpp  SDL_Backports.cpp  logoCyan.h  logoGreen.h  logoRed.h  vcr.h
source/assets/: cursor.h  default.h  flixel.h  logoBlue.h  logoC.h  logoCyan.h  logoGreen.h  logoRed.h  logoYellow.h
